Fixed navbar z-index

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,6 +89,7 @@ header svg:hover {
   overflow: hidden;
   height: calc(100vh - 64px);
   width: 100vw;
+  z-index: 99;
 }
 
 #navbar > .dropdown {
